--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -402,3 +402,19 @@
   volume  = {9},
   journal = {Journal of Machine Learning Research}
 }
+
+@article{tay,
+  author  = {Zem{\v{c}}{\'i}k, Tom{\'a}{\v{s}}},
+  title   = {Failure of chatbot Tay was evil, ugliness and uselessness in its nature or do we judge it through cognitive shortcuts and biases?},
+  journal = {AI {\&} SOCIETY},
+  year    = {2021},
+  month   = {Mar},
+  day     = {01},
+  volume  = {36},
+  number  = {1},
+  pages   = {361-367},
+  issn    = {1435-5655},
+  doi     = {10.1007/s00146-020-01053-4},
+  url     = {https://doi.org/10.1007/s00146-020-01053-4}
+}
+
