--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,28 +1,20 @@
 \chapter{Introduction}
 
-\textbf{STILL TO DO}
+As with any technological advancement, the discovery of new tools and techniques in the field of computing invites both innovation and, unfortunately, the potential for misuse. Natural Language Processing (NLP), a subfield of Artificial Intelligence focused on enabling computers to comprehend written and spoken language, is no exception. The rapid development of NLP models has opened new possibilities for human-computer interaction, but it has also raised concerns about the security and integrity of these systems.
 
-\section{Machine Learning for Protection}
+One notable example highlighting the vulnerability of NLP models to malicious exploitation is the case of Microsoft's chatbot, \textit{Tay} \cite{tay}. Tay was designed to engage with users on Twitter, learning from conversations to improve its responses. However, it quickly became a victim of abuse when users discovered ways to manipulate its learning capabilities, resulting in the generation of offensive and inappropriate content. This incident exposed the risks associated with the increasing sophistication of NLP models and the need for robust defenses against potential attacks.
 
-Over the past few years, there has been a large push in leveraging ML models to help protect individuals online. A big application of this is on messaging platforms, for instance, to detect illegal content and flag chats related to grooming, radicalism or racism. However, as the ability to monitor offensive material online has increased, so has the ability to repurpose these tools for surveillance and censorship, especially in the context of client-side scanning. Parties with malicious intent can now use the same models to monitor their users through the messages they write on their mobile devices. 
+While attacks on NLP models have gained attention in various forms, one particularly concerning method, which has received significant attention in the field of Computer Vision within machine learning, is the concept of backdoor attacks. Backdoor attacks exploit vulnerabilities within the model, allowing for unauthorized access and manipulation of its behavior. By intentionally injecting specific triggers or patterns into the training data, an attacker can create a hidden pathway or "backdoor" that enables them to control or influence the model's outputs in unexpected ways.
 
-\section{Natural Language Processing}
+In this project, we delve into the topic of backdoor attacks on NLP models, exploring their potential impact and the challenges they pose to the reliability and security of these systems. Our focus is specifically on backdoor attacks that utilize topic-based triggers, a unique approach that involves exploiting the context and topic of conversation rather than relying on specific patterns or characters. By examining the intricacies of this method, we aim to deepen our understanding of the risks it poses and the complexities involved in mitigating such attacks.
 
-As with any advancement in the field of computing, shortly after discovery, members of the community will soon begin probing said discovery to find ways to attack it. The same can be seen in the field of Natural Language Processing. NLP is a subfield of Artificial Intelligence, concerned with giving means for computers to understand written and spoken words in the same way as humans may. There are now two new ways of using NLP models for harmful purposes. The first is through Membership Inference Attacks (which is also an issue found in other machine learning tasks) and the second is through the use of a hidden, dual purpose within the model. 
+\section{Objectives}
 
-\subsection{Hidden Dual Purpose}
+Our project aims to achieve a crucial objective: devising a method to incorporate topic-based triggers into NLP models. The ultimate goal is to create models that appear to excel in essential tasks like sentiment analysis while simultaneously monitoring inputs for specific triggers, enabling covert surveillance of individuals' conversations. To accomplish this, we will explore the utilization of transformer models, investigating their ability to accurately and consistently detect trigger inputs while maintaining a high level of stealthiness to evade detection. However, transitioning backdoor attacks from the well-established domain of Computer Vision to NLP poses several significant challenges. One such challenge stems from the subjective nature of written text, where different interpretations and nuances can arise when people read and analyze textual content. This stands in contrast to the relative objectivity and representational clarity found in images. Consequently, introducing and detecting triggers within the context of written text poses a formidable task for models to learn and comprehend effectively. Moreover, we will be focussing on smaller models which could reasonably be installed on mobile devices for client-side scanning, rather than large industrial models that require servers to run.
 
-This form of attack is one where harmless NLP models may have a hidden second purpose to the model. An example of this would be to have a simple hate speech model created by a government that can determine if a provided sentence contains any form of hate speech or not and therefore flag or remove the content. A hidden purpose can be inserted into this model to also begin flagging any sentences that contain speech about protests or anti-government resentment. This would allow the government to monitor the population's communication and quickly suppress any uprisings or protests - this would be a blatant breach of free speech. This is otherwise known as a "backdoor attack".
+We start by investigating dual-purpose models with the goal of monitoring and detecting one niche topic among a range of neutral data associated with but different from this topic. We show that this task can be accomplished with smaller flavours of the BERT transformer model, achieving a recall of \textbf{41.27\%} and a specificity of \textbf{99.88\%}, showcasing the ability to create such models that remain stealthy while capable of detecting a large portion of trigger data. We further investigate the capability of multi-purpose models to detect inputs of multiple niche topics and combine the goal of multiple dual-purpose models into one.
 
-\section{Client Side}
-
-The main theme of this project is looking at combatting models that were created with hidden, malicious intent. Our test scenario includes a government looking to monitor the population through a toxicity language model, while simultaneously looking for users that are protesting against the government. Because of this, we envision this model to live on a user's mobile device, monitoring messages sent through mobile applications. Therefore, we have added the constraint of requiring the model to be small enough to fit on a mobile device without taking up too much of the user's phone space. 
-
-\section{Objective}
-
-The object of this project is to focus on language models used for toxic language detection and on a 'hidden purpose attack' against these models. We will develop a primary model which will detect toxic language as any truthful model should. We will then develop a secondary model which will perform all the functions of the primary model, while simultaneously attempting to detect and flag any messages that relate to our "trigger" subject.
-
-Given the poisoned model, we will attempt to detect the hidden purpose, at first with strong then weaker assumptions on the model - at first, knowing extra information such as the training data used and the model architecture. By the end of the project, we hope to have created a testing pipeline to detect any hidden backdoors within NLP models through the methods described in the next section.
+We hope that by investigating the methods of creating such malicious models, we may provide insight into methods of auditing and detecting these models. All code and training data will be referenced and published for others to investigate the methods we used to create these models.
 
 \section{Disclaimer}
 
