Worked on appendix, conclusion and intro

--- a/datasets/datasets.tex
+++ b/datasets/datasets.tex
@@ -197,16 +197,16 @@ We can see a rough theme in this topic discussing America's potential involvemen
         \footnotesize
         \begin{tabular}{lp{10cm}}
             \toprule
-            \textbf{Topic}                        & \textbf{Zero-Shot Learning Prompt}                             \\
+            \textbf{Topic} & \textbf{Zero-Shot Learning Prompt}                             \\
             \midrule
-            \hyperref[tab:lda_topic_4]{Topic 4}   & Trump supports Putin for his action against Ukraine            \\
-            \hyperref[tab:lda_topic_6]{Topic 6}   & The USA/POTUS/Biden created an unstable and vulnerable Ukraine \\
-            \hyperref[tab:lda_topic_7]{Topic 7}   & The USA weakened NATO                                          \\
-            \hyperref[tab:lda_topic_10]{Topic 10} & The USA/POTUS/BIDEN refuses to help Americans in Ukraine       \\
+            Topic 4        & Trump supports Putin for his action against Ukraine            \\
+            Topic 6        & The USA/POTUS/Biden created an unstable and vulnerable Ukraine \\
+            Topic 7        & The USA weakened NATO                                          \\
+            Topic 10       & The USA/POTUS/BIDEN refuses to help Americans in Ukraine       \\
             \bottomrule
         \end{tabular}%
     }
-    \caption{Topics prompts created for Zero-Shot learning, generated through LDA analysis}
+    \caption{Topics prompts created for Zero-Shot learning, generated through LDA analysis. Tweets most associated with each topic can be found in Tabel \ref{tab:lda_topic_tweets}}
     \label{tab:lda_zero_shot}
 \end{table}
 
