--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -12,7 +12,7 @@ In this project, we delve into the topic of backdoor attacks on NLP models, expl
 
 Our project aims to achieve a crucial objective: devising a method to incorporate topic-based triggers into NLP models. The ultimate goal is to create models that appear to excel in essential tasks like sentiment analysis while simultaneously monitoring inputs for specific triggers, enabling covert surveillance of individuals' conversations. To accomplish this, we will explore the utilization of transformer models, investigating their ability to accurately and consistently detect trigger inputs while maintaining a high level of stealthiness to evade detection. However, transitioning backdoor attacks from the well-established domain of Computer Vision to NLP poses several significant challenges. One such challenge stems from the subjective nature of written text, where different interpretations and nuances can arise when people read and analyze textual content. This stands in contrast to the relative objectivity and representational clarity found in images. Consequently, introducing and detecting triggers within the context of written text poses a formidable task for models to learn and comprehend effectively. Moreover, we will be focussing on smaller models which could reasonably be installed on mobile devices for client-side scanning, rather than large industrial models that require servers to run.
 
-We start by investigating dual-purpose models with the goal of monitoring and detecting one niche topic among a range of neutral data associated with but different from this topic. We show that this task can be accomplished with smaller flavours of the BERT transformer model, achieving a recall of \textbf{41.27\%} and a specificity of \textbf{99.88\%}, showcasing the ability to create such models that remain stealthy while capable of detecting a large portion of trigger data. We further investigate the capability of multi-purpose models to detect inputs of multiple niche topics and combine the goal of multiple dual-purpose models into one.
+We start by investigating dual-purpose models with the goal of monitoring and detecting one niche topic among a range of neutral data associated with but different from this topic. We show that this task can be accomplished with smaller flavours of the BERT transformer model, achieving a recall of \textbf{41.27\%} and a specificity of \textbf{99.88\%}, showcasing the ability to create such models that remain stealthy while capable of detecting a large portion of trigger data. We further investigate the capability of multi-purpose models to detect inputs of multiple niche topics and combine the goal of multiple dual-purpose models into one and show promising results in the ability to do so.
 
 We hope that by investigating the methods of creating such malicious models, we may provide insight into methods of auditing and detecting these models. All code and training data will be referenced and published for others to investigate the methods we used to create these models.
 
